<resources>
    <string name="Midnight">Midnight</string>
    <string name="Noon">Noon</string>
    <string name="abbrev_month">%-b</string>
    <string name="abbrev_month_day" formatted="false">%b %-e</string>
    <string name="abbrev_month_day_year" formatted="false">%b %-e, %Y</string>
    <string name="abbrev_month_year" formatted="false">%b %Y</string>
    <string name="abbrev_wday_month_day_no_year">EEE, MMMM d</string>
    <string name="abbrev_wday_month_day_year">EEE, MMM d, yyyy</string>
    <string name="about_app_version">Application version: %s</string>
    <string name="about_button_rate">Rate this app</string>
    <string name="about_choose_email_app">Choose email application</string>
    <string name="about_config_version">Configuration version: %s</string>
    <string name="about_eula_hide">Hide End User Agreement</string>
    <string name="about_eula_show">AVAST End User Agreement</string>
    <string name="about_feedback">Send Feedback to AVAST</string>
    <string name="about_opensource_author">by %s</string>
    <string name="about_opensource_hide">Hide open-source code used</string>
    <string name="about_opensource_project_web">Project web</string>
    <string name="about_opensource_show">Open-source code used</string>
    <string name="about_opensource_version">(version %s)</string>
    <string name="about_title">About</string>
    <string name="about_vps_definitions">Number of definitions: %s</string>
    <string name="about_vps_version">Virus definition version: %s</string>
    <string name="about_vps_version_unknown">unknown</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="activity_filebrowser_label">Select file or directory</string>
    <string name="android_permission_ACCESS_COARSE_LOCATION" />
    <string name="android_permission_ACCESS_FINE_LOCATION" />
    <string name="android_permission_ACCESS_WEB_PAGES" />
    <string name="android_permission_ACCOUNT_MANAGER" />
    <string name="android_permission_AUTHENTICATE_ACCOUNTS" />
    <string name="android_permission_GET_ACCOUNTS" />
    <string name="android_permission_MANAGE_ACCOUNTS" />
    <string name="android_permission_READ_CONTACTS" />
    <string name="android_permission_READ_PHONE_STATE" />
    <string name="android_permission_READ_SMS" />
    <string name="android_permission_RECEIVE_MMS" />
    <string name="android_permission_RECEIVE_SMS" />
    <string name="android_permission_RECEIVE_WAP_PUSH" />
    <string name="android_permission_SEND_SMS" />
    <string name="android_permission_WRITE_CONTACTS" />
    <string name="android_permission_WRITE_SECURE_SETTINGS" />
    <string name="android_permission_WRITE_SMS" />
    <string name="anti_theft" />
    <string name="app_copyright">Warning: this application is protected by copyright law and international treaties. Unauthorized reproduction or distribution of this program, or any part of it, may result in severe civil and criminal penalties, and will be prosecuted to the maximum extent possible under the law.</string>
    <string name="app_descr" />
    <string name="app_expired" />
    <string name="app_expired_text" />
    <string name="app_feedback_email">android@avast.com</string>
    <string name="app_name">Avast Mobile Security</string>
    <string name="applicationId">273679106083329</string>
    <string name="application_locking" />
    <string name="application_management" />
    <string name="applocking_password_type_avast" />
    <string name="applocking_password_type_gesture" />
    <string name="applocking_password_type_text" />
    <string name="avast_error">ERROR:</string>
    <string name="avast_ok">OK:</string>
    <string name="avast_software">Avast Software</string>
    <string name="avast_warning">WARNING:</string>
    <string name="avast_warning_binary_sms">Your SMS message has been received on a device running Android 4.4 (KitKat or later). Incoming text SMS will be plainly visible to any person. Use the new SMS Remote Control within the latest version of Avast Mobile Security to send invisible binary SMS commands, and enable Android 4.4 mode within your Anti-Theft installation.</string>
    <string name="avast_warning_hangouts_sms">Your SMS message has been received on a device using the new Google Hangouts version. This causes text SMS to be plainly visible to any person. Please use Avast Mobile Security for sending commands instead of sending text SMS, and enable Android 4.4 mode within your Anti-Theft installation. The command will be performed anyways, this is just a warning.</string>
    <string name="b_trafficinfo_orderby_3g" />
    <string name="b_trafficinfo_orderby_wifi" />
    <string name="b_trafficinfo_period_month" />
    <string name="b_trafficinfo_period_today" />
    <string name="b_trafficinfo_period_year" />
    <string name="backup" />
    <string name="backup_install" />
    <string name="battery_saver" />
    <string name="billing_new_bill_to_phone">Bill to phone credit</string>
    <string name="billing_new_debit_credit_card">Debit/credit card</string>
    <string name="billing_new_help_message">Choose the payment method most convenient for you. Please note that license prices may slightly vary depending on the selected payment method. Price that you see on your device screen is final, no further charges apply.</string>
    <string name="billing_new_help_title">About</string>
    <string name="billing_new_payment_method">Choose payment method:</string>
    <string name="billing_new_purchase_on_avast_com">Purchase on avast.com</string>
    <string name="billing_new_title"><b>Totally secure</b> your Android device and personal data</string>
    <string name="billing_new_unknown_purchase_method">Unknown</string>
    <string name="billing_new_working">Working…</string>
    <string name="billing_new_you_will_be_redirected">You will be redirected to our website.</string>
    <string name="billing_new_your_subscription">Choose your licence:</string>
    <string name="c2dm_account_missing">Google account is missing.</string>
    <string name="c2dm_comm_error">Cannot read C2DM response.</string>
    <string name="c2dm_registration_error">C2DM is not supported on this phone.</string>
    <string name="c2dm_removed">C2DM registration was removed.</string>
    <string name="c2dm_sender_account_not_recognized">The C2DM sender was not recognized.</string>
    <string name="c2dm_too_many_registrations">Too many applications use C2DM on the device.</string>
    <string name="c2dm_user_credentials_wrong">Authentication of your Google account failed on the device.</string>
    <string name="campaign_battery_saver_app">Avast Battery Saver</string>
    <string name="campaign_battery_saver_description">Productivity</string>
    <string name="campaign_battery_saver_scanner_text_A">Extend your battery life.</string>
    <string name="campaign_battery_saver_scanner_text_B">Get 20% more on one charge.</string>
    <string name="campaign_battery_saver_scanner_title_A">Running out of juice?</string>
    <string name="campaign_battery_saver_scanner_title_B">Not enough power?</string>
    <string name="campaign_battery_saver_text">Squeeze 20% more juice per charge from your phone.</string>
    <string name="campaign_checkbox">"Don't show this again"</string>
    <string name="campaign_grimefighter_app">Avast GrimeFighter</string>
    <string name="campaign_grimefighter_description">Tools</string>
    <string name="l_at_client_forward_start_stop">Forwarding</string>
    <string name="l_at_client_forward_type">Forward type</string>
    <string name="l_at_client_phone_number">Enter target phone number</string>
    <string name="l_feedback_button_cancel">Cancel</string>
    <string name="l_feedback_button_send">Send</string>
    <string name="l_feedback_description">Description</string>
    <string name="l_feedback_description_hint">The description of the report/request.</string>
    <string name="l_feedback_email">Your email</string>
    <string name="l_feedback_email_hint">(optional)</string>
    <string name="l_feedback_name">Your name</string>
    <string name="l_feedback_name_hint">(optional)</string>
    <string name="l_feedback_send_dumpsys">Send detailed system info</string>
    <string name="l_feedback_send_dumpsys_desc">Send the detailed system information about running processes, installed applications, memory, cpu and battery state</string>
    <string name="l_feedback_write_description">Write your description here</string>
    <string name="l_menu_referral">Earn a free Premium license</string>
    <string name="l_phone_number_optional">Phone number (optional)</string>
    <string name="l_silent_forwarding">Silent forward</string>
    <string name="l_subscription_premium_plans_desc">Purchase Avast Mobile Premium subscription and get maximum protection for your Android device and data. All the free features plus:</string>
    <string name="l_subscription_premium_plans_features_adrep">Ad detector in apps</string>
    <string name="l_subscription_premium_plans_features_applocking">App Locking</string>
    <string name="l_subscription_premium_plans_features_at">Many advanced Anti-Theft features</string>
    <string name="l_subscription_premium_plans_features_backup">Backup of videos, music and more</string>
    <string name="menu_about">About</string>
    <string name="menu_account_signup">Sign up for free Avast Account</string>
    <string name="menu_offerwall">Featured Apps</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_updates">Updates</string>
    <string name="msg_feedback_description_missing">The report description must be at least %s characters long.</string>
    <string name="msg_feedback_email_not_valid">The email address is not valid.</string>
    <string name="pref_avast_pin_description">The Avast PIN will be temporarily stored for use within 5 minutes after sending the SMS command.</string>
    <string name="pref_language">Change language</string>
    <string name="pref_language_current">Current: %s</string>
    <string name="pref_notification_center_title">Notification Center</string>
    <string name="pref_password_change">Change Avast PIN</string>
    <string name="pref_password_enter">Enter your PIN</string>
    <string name="pref_password_protection">PIN protection</string>
    <string name="pref_password_recovery_number">Secondary phone number for PIN recovery</string>
    <string name="satisfaction_avast_security">Avast Mobile Security?</string>
    <string name="satisfaction_leave_rating">Give us 5 stars</string>
    <string name="satisfaction_let_us_know">We want to know!</string>
    <string name="satisfaction_like">Like</string>
    <string name="satisfaction_send_us_feedback">Not Satisfied?</string>
    <string name="satisfaction_skip">Skip for now…</string>
    <string name="set_commands">SET Commands</string>
    <string name="set_commands_menu_subtitle">Changes the Anti-Theft settings of the target device</string>
    <string name="settings">Settings</string>
</resources>