<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" style="@style/ScrollView.Transparent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:avast="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_marginTop="@dimen/content_marginVertical" android:layout_marginBottom="@dimen/content_marginVertical" style="@style/Row">
            <TextView android:id="@id/feedback_email_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/l_feedback_email" style="?rowTitleStyle" />
            <TextView android:textStyle="bold" android:textColor="@color/text_problem" android:id="@id/feedback_email_error_message" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_marginVerticalSmall" android:text="@string/msg_feedback_email_not_valid" />
            <EditText android:id="@id/feedback_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_marginVerticalSmall" android:hint="@string/l_feedback_email_hint" android:maxLines="1" android:inputType="textEmailAddress" />
        </LinearLayout>
        <include layout="@layout/row_line_separator" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_marginTop="@dimen/content_marginVertical" android:layout_marginBottom="@dimen/content_marginVertical" style="@style/Row">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/l_feedback_name" style="?rowTitleStyle" />
            <EditText android:id="@id/feedback_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_marginVerticalSmall" android:hint="@string/l_feedback_name_hint" android:maxLines="1" android:inputType="text" />
        </LinearLayout>
        <include layout="@layout/row_line_separator" />
        <com.avast.android.generic.ui.widget.SelectorRow android:id="@id/feedback_type" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <include layout="@layout/row_line_separator" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_marginTop="@dimen/content_marginVertical" android:layout_marginBottom="@dimen/content_marginVertical" style="@style/Row">
            <TextView android:id="@id/feedback_description_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/l_feedback_description" style="?rowTitleStyle" />
            <TextView android:textStyle="bold" android:textColor="@color/text_problem" android:id="@id/feedback_description_error_message" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_marginVerticalSmall" android:text="@string/msg_feedback_description_missing" />
            <EditText android:gravity="start|center|top" android:id="@id/feedback_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_marginVerticalSmall" android:hint="@string/l_feedback_description_hint" android:minLines="3" android:inputType="textCapSentences|textMultiLine|textShortMessage" />
        </LinearLayout>
        <include layout="@layout/row_line_separator" />
        <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/feedback_checkbox_ciq" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <include layout="@layout/row_line_separator" />
        <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/feedback_checkbox_log" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <include layout="@layout/row_line_separator" />
        <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/feedback_checkbox_dumpsys" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/l_feedback_send_dumpsys" avast:rowSubTitle="@string/l_feedback_send_dumpsys_desc" avast:rowDAO="none" />
        <LinearLayout style="@style/ButtonLayout">
            <Button android:id="@id/feedback_button_cancel" android:layout_width="fill_parent" android:layout_marginRight="4.0dip" android:text="@string/l_feedback_button_cancel" android:layout_weight="1.0" android:layout_marginEnd="4.0dip" style="@style/Button.Gray" />
            <Button android:id="@id/feedback_button_send" android:layout_width="fill_parent" android:layout_marginLeft="4.0dip" android:text="@string/l_feedback_button_send" android:layout_weight="1.0" android:layout_marginStart="4.0dip" style="@style/Button.Green" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>