<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:avast="http://schemas.android.com/apk/res-auto">
    <com.avast.android.generic.ui.widget.EditTextRow android:id="@id/r_at_client_phone_number" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="phoneNumber" avast:rowTitle="@string/l_at_client_phone_number" avast:rowDAO="none" />
    <include layout="@layout/row_line_separator" />
    <com.avast.android.generic.ui.widget.EditTextRow android:id="@id/r_at_client_pin" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="pin" avast:rowTitle="@string/pref_password_enter" avast:rowSubTitle="@string/pref_avast_pin_description" avast:rowDAO="none" />
    <include layout="@layout/row_line_separator" />
</LinearLayout>