<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="?background_normal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" style="@style/ScrollView.Transparent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:avast="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <AutoCompleteTextView android:textSize="@dimen/font_medium" android:id="@id/satisfaction_feedback_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/content_marginHorizontal" android:layout_marginTop="@dimen/content_marginVertical" android:layout_marginRight="@dimen/content_marginHorizontal" android:layout_marginBottom="@dimen/content_marginVerticalSmall" android:hint="@string/l_feedback_email" android:inputType="textEmailAddress" android:layout_marginStart="@dimen/content_marginHorizontal" android:layout_marginEnd="@dimen/content_marginHorizontal" />
            <EditText android:textSize="@dimen/font_medium" android:gravity="center|left|top" android:id="@id/satisfaction_feedback_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/content_marginHorizontal" android:layout_marginTop="@dimen/content_marginVerticalSmall" android:layout_marginRight="@dimen/content_marginHorizontal" android:layout_marginBottom="@dimen/content_marginVerticalSmall" android:hint="@string/l_feedback_write_description" android:maxLines="10" android:minLines="5" android:singleLine="false" android:layout_marginStart="@dimen/content_marginHorizontal" android:layout_marginEnd="@dimen/content_marginHorizontal" />
            <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/satisfaction_feedback_check_send_attachments" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/l_feedback_send_dumpsys" avast:rowSubTitle="@string/l_feedback_send_dumpsys_desc" avast:rowDefaultValue="true" avast:rowDAO="none" />
        </LinearLayout>
        <Button android:textSize="@dimen/font_medium" android:id="@id/satisfaction_feedback_send" android:layout_width="fill_parent" android:layout_marginLeft="@dimen/content_marginHorizontal" android:layout_marginTop="@dimen/content_marginVertical" android:layout_marginRight="@dimen/content_marginHorizontal" android:layout_marginBottom="@dimen/content_marginVerticalSmall" android:text="@string/l_feedback_button_send" android:layout_marginStart="@dimen/content_marginHorizontal" android:layout_marginEnd="@dimen/content_marginHorizontal" style="@style/Button.Green" />
    </LinearLayout>
</ScrollView>